# rust-agent

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Makefile  NOTICE  OPERATIONS.md  QUICKSTART.md  README.md  SECURITY.md  TESTING.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
agntctl/: Cargo.toml
agntctl/fixtures/: compliance_slo_ok.json  compliance_verify_ok.json  ops_action_latency_candidate_ok.json  ops_latency_histogram_baseline.json  ops_latency_histogram_candidate_ok.json  ops_latency_traces_baseline.json  ops_latency_traces_candidate_ok.json  ops_summary_candidate_ok.json  ops_summary_ok.json
agntctl/src/: main.rs
api/: Cargo.toml
api/src/: lib.rs  main.rs
api/static/: console.html
api/tests/: api_integration.rs
core/: Cargo.toml
core/src/: agent_context.rs  db.rs  db_dual.rs  db_pool.rs  db_worker_dual.rs  lib.rs  policy.rs  redaction.rs  secrets.rs  storage.rs
core/tests/: db_dual_backend_parity_integration.rs  db_dual_sqlite_integration.rs  db_integration.rs  db_worker_dual_sqlite_integration.rs  sqlite_solo_lite_integration.rs  sqlite_solo_lite_misconfig_integration.rs  workspace_versions_in_sync.rs
docs/: AGENT_FILES.md  API.md  ARCHITECTURE.md  ARCHITECTURE_BRIEF.md  CODE_ORGANIZATION.md  CONTRIBUTING.md  CROSS_PLATFORM.md  DEVELOPMENT.md  IRONCLAW_INTEGRATION_IDEAS.md  M10_EXECUTION_CHECKLIST.md  M11A_PLAN.md  MILESTONE_SYNC.md  MVP_PLAN.md  NAMING.md  OPERATIONS.md  OPERATIONS_MANUAL.md  PAYMENTS.md  PLAYBOOKS.md  POLICY.md  README.md  RELEASE_WORKFLOW.md  ROADMAP.md  RUNBOOK.md  SCHEMA.md  SECRETS.md  SECURITY.md  SESSION_HANDOFF.md  STOPPING_POINT_2026-02-26.md  TESTING.md  THREAT_MODEL.md  TOP_20_SKILLS_RESEARCH.md  WORKFLOW_LANES.md  agent_platform.md  task-ledger.md
docs/ADR/: ADR-0001-out-of-process-skills.md  ADR-0002-ndjson-protocol-v0.md  ADR-0003-no-general-http-in-mvp.md  ADR-0004-shared-postgres-topology.md  ADR-0005-nostr-first-whitenoise.md  ADR-0006-sandboxed-local-exec-primitive.md  ADR-0007-pluggable-nostr-signer-modes.md  ADR-0008-cashu-rail-planning.md  ADR-0009-agent-context-files-profile.md  ADR-0010-workspace-versioning-alignment.md
docs/templates/: CHANGE_TICKET_TEMPLATE.md  ESCALATION_ROSTER_TEMPLATE.md
infra/config/: profile.enterprise.env  profile.solo-dev.env  profile.solo-lite.env  secureagnt.yaml
infra/containers/: Dockerfile.api  Dockerfile.worker  compose.yml
infra/launchd/: secureagnt-api.plist  secureagnt.plist
infra/systemd/: secureagnt-api.service  secureagnt-slack-events-bridge.service  secureagnt.service
migrations/: 0001_init.sql  0002_run_leases.sql  0003_triggers.sql  0004_trigger_events.sql  0005_trigger_cron_and_guardrails.sql  0006_trigger_jitter_and_scheduler_leases.sql  0007_payment_ledger.sql  0008_llm_token_usage.sql  0009_compliance_audit_plane.sql  0010_compliance_tamper_chain.sql  0011_compliance_retention_legal_hold.sql  0012_tenant_isolation_indexes.sql  0013_memory_plane.sql  0014_memory_compaction_controls.sql  0015_compliance_siem_delivery_outbox.sql  0016_payment_provider_cashu.sql  0017_compliance_siem_alert_acks.sql  0018_llm_gateway_distributed_controls.sql  0019_run_semantic_dedupe.sql  0020_trigger_events_semantic_dedupe_key.sql
migrations/sqlite/: 0001_init.sql  0019_run_semantic_dedupe.sql  0020_trigger_events_semantic_dedupe_key.sql  README.md
scripts/install/: secureagnt-solo-lite-installer.sh
scripts/ops/: capture_perf_baseline.sh  compliance_gate.sh  deploy_preflight.sh  generate_release_manifest.sh  governance_gate.sh  init_agent_context.sh  inspect_solo_lite_startup_delivery.sh  isolation_gate.sh  llm_channel_drift_check.py  llm_channel_parity_smoke.py  m10_matrix_gate.sh  m10_signoff.sh  m5c_signoff.sh  m6_signoff.sh  m6a_signoff.sh  m7_signoff.sh  m8_signoff.sh  m8a_signoff.sh  (+32 more)
skillrunner/: Cargo.toml
skillrunner/src/: lib.rs  protocol.rs  runner.rs
skillrunner/tests/: runner_integration.rs
worker/: Cargo.toml
worker/src/: lib.rs  llm.rs  local_exec.rs  main.rs  nip46_signer.rs  nip47_wallet.rs  nostr_transport.rs  signer.rs  slack.rs
worker/tests/: worker_integration.rs
(+87 files in other folders)
