[workspace]
resolver = "2"
members = [
  "api",
  "worker",
  "core",
  "skillrunner",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process", "io-util", "time", "net", "sync"] }
anyhow = "1"
thiserror = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "macros"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "time", "json"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nostr = { version = "0.44", features = ["nip46"] }
