[package]
name = "api"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
core = { path = "../core" }

tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
sqlx.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

axum = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
