[package]
name = "core"
version.workspace = true
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
sqlx.workspace = true
tracing.workspace = true
sha2.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
cron = "0.12"

[dev-dependencies]
tokio.workspace = true
