[package]
name = "skillrunner"
version.workspace = true
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
bytes = "1"
